<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottomSheetContainer"
    style="?attr/bottomSheetStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:behavior_peekHeight="100dp"
    app:cardCornerRadius="16dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <androidx.constraintlayout.widget.ConstraintLayout
        style="?attr/bottomSheetStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/dragHandle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/filter_handle"
            android:src="@drawable/ic_drag_handle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/classHeaderText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/label_class"
            android:textAppearance="?attr/textAppearanceSubtitle1"
            app:layout_constraintBottom_toBottomOf="@id/clearButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/clearButton" />

        <Button
            android:id="@+id/clearButton"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_clear"
            android:text="@string/label_clear"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <HorizontalScrollView
            android:id="@+id/classScrollView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingHorizontal="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/clearButton">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/classChipGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:singleLine="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipAqua"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/aqua"
                    app:checkedIconVisible="false"
                    app:chipIcon="@drawable/ic_class_aquatic"
                    app:chipIconVisible="true" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipBeast"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/beast"
                    app:checkedIconVisible="false"
                    app:chipIcon="@drawable/ic_class_beast"
                    app:chipIconVisible="true" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipBird"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bird"
                    app:checkedIconVisible="false"
                    app:chipIcon="@drawable/ic_class_bird"
                    app:chipIconVisible="true" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipBug"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bug"
                    app:checkedIconVisible="false"
                    app:chipIcon="@drawable/ic_class_bug"
                    app:chipIconVisible="true" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipPlant"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/plant"
                    app:checkedIconVisible="false"
                    app:chipIcon="@drawable/ic_class_plant"
                    app:chipIconVisible="true" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipReptile"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reptile"
                    app:checkedIconVisible="false"
                    app:chipIcon="@drawable/ic_class_reptile"
                    app:chipIconVisible="true" />

            </com.google.android.material.chip.ChipGroup>
        </HorizontalScrollView>

        <TextView
            android:id="@+id/bodyPartsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/label_body_part"
            android:textAppearance="?attr/textAppearanceSubtitle1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/classScrollView" />

        <HorizontalScrollView
            android:id="@+id/bodyPartsScrollView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingHorizontal="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bodyPartsText">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/bodyPartsChipGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:singleLine="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipEyes"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/part_eyes"
                    app:checkedIconVisible="false"
                    app:chipIcon="@drawable/part_eyes"
                    app:chipIconVisible="true" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipEars"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/part_ears"
                    app:checkedIconVisible="false"
                    app:chipIcon="@drawable/part_ears"
                    app:chipIconVisible="true" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipBack"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/part_back"
                    app:checkedIconVisible="false"
                    app:chipIcon="@drawable/part_back"
                    app:chipIconVisible="true" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipMouth"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/part_mouth"
                    app:checkedIconVisible="false"
                    app:chipIcon="@drawable/part_mouth"
                    app:chipIconVisible="true" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipHorn"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/part_horn"
                    app:checkedIconVisible="false"
                    app:chipIcon="@drawable/part_horn"
                    app:chipIconVisible="true" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipTail"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/part_tail"
                    app:checkedIconVisible="false"
                    app:chipIcon="@drawable/part_tail"
                    app:chipIconVisible="true" />

            </com.google.android.material.chip.ChipGroup>
        </HorizontalScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
